<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.globalmentor</groupId>
		<artifactId>globalmentor-base</artifactId>
		<version>0.7.3</version>
	</parent>

	<groupId>io.guise</groupId>
	<artifactId>guise</artifactId>
	<version>0.5.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Guise Ecosystem</name>
	<description>Guise™ Internet application ecosystem and bill of materials.</description>
	<url>https://guise.io/</url>
	<inceptionYear>2005</inceptionYear>

	<organization>
		<name>GlobalMentor, Inc.</name>
		<url>https://www.globalmentor.com/</url>
	</organization>

	<developers>
		<developer>
			<name>Garret Wilson</name>
			<email>garret@globalmentor.com</email>
			<organization>GlobalMentor, Inc.</organization>
			<organizationUrl>https://www.globalmentor.com/</organizationUrl>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://bitbucket.org/globalmentor/guise.git</connection>
		<developerConnection>scm:git:https://bitbucket.org/globalmentor/guise.git</developerConnection>
		<url>https://bitbucket.org/globalmentor/guise</url>
	</scm>

	<properties>
		<maven.compiler.release>11</maven.compiler.release>
		<tomcat.version>9.0.50</tomcat.version>
		<urf.version>0.4.1</urf.version>
	</properties>

	<modules>
		<module>cli</module>
		<module>framework</module>
		<module>framework-demo</module>
		<module>mesh</module>
		<module>mummy</module>
		<module>tomcat</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.drewnoakes</groupId>
				<artifactId>metadata-extractor</artifactId>
				<version>2.16.0</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-application</artifactId>
				<version>0.7.7</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-awt</artifactId>
				<version>0.6.1</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-country-us</artifactId>
				<version>0.6.2</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-ee</artifactId>
				<version>0.6.4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-iso-idcard</artifactId>
				<version>0.6.2</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-itu</artifactId>
				<version>0.6.1</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-mail</artifactId>
				<version>0.6.1</version>
			</dependency>

			<dependency>
				<groupId>com.sun.mail</groupId>
				<artifactId>javax.mail</artifactId>
				<version>1.6.2</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-text-directory-vcard</artifactId>
				<version>0.6.3</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-text-elff</artifactId>
				<version>0.6.1</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-web</artifactId>
				<version>0.6.6</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.vladsch.flexmark</groupId>
				<artifactId>flexmark-all</artifactId>
				<version>0.50.50</version>
			</dependency>

			<dependency>
				<groupId>io.clogr</groupId>
				<artifactId>clogr-bom</artifactId>
				<version>0.8.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.confound</groupId>
				<artifactId>confound-bom</artifactId>
				<version>0.7.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-cli</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-framework</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-framework-demo</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-mesh</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-mummy</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-tomcat</artifactId>
				<version>0.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.urf</groupId>
				<artifactId>config-file-format-turf-provider</artifactId>
				<version>${urf.version}</version>
			</dependency>

			<dependency>
				<groupId>io.urf</groupId>
				<artifactId>urf-model</artifactId>
				<version>${urf.version}</version>
			</dependency>

			<dependency>
				<groupId>io.urf</groupId>
				<artifactId>turf</artifactId>
				<version>${urf.version}</version>
			</dependency>

			<dependency>
				<groupId>io.urf</groupId>
				<artifactId>urf-vocab-content</artifactId>
				<version>${urf.version}</version>
			</dependency>

			<dependency>
				<groupId>org.snakeyaml</groupId>
				<artifactId>snakeyaml-engine</artifactId>
				<version>2.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-imaging</artifactId>
				<version>1.0-alpha2</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-jexl3</artifactId>
				<version>3.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-core</artifactId>
				<version>${tomcat.version}</version>
			</dependency>

			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>2.17.24</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>yuicompressor-maven-plugin</artifactId>
					<version>1.5.1</version>
				</plugin>

				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<!-- TODO bring back when works on m2e and JavaScript files are moved 
									back to globalmentor-core -->
								<!-- <pluginExecution> -->
								<!-- <pluginExecutionFilter> -->
								<!-- <groupId>org.apache.maven.plugins</groupId> -->
								<!-- <artifactId>maven-dependency-plugin</artifactId> -->
								<!-- <versionRange>[2.4,)</versionRange> -->
								<!-- <goals> -->
								<!-- <goal>unpack</goal> -->
								<!-- </goals> -->
								<!-- </pluginExecutionFilter> -->
								<!-- <action> -->
								<!-- <ignore></ignore> -->
								<!-- </action> -->
								<!-- </pluginExecution> -->
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>